<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4636CD">


        <TextView
            android:id="@+id/themeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_selection"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.062" />

        <RadioGroup
            android:id="@+id/themeSelection"
            android:layout_width="350dp"
            android:layout_height="450dp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/submitThemeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/themeTextView">

            <RadioButton
                android:id="@+id/radioDinosaur"
                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:button="@drawable/dinosaur"
                android:checked="true"
                android:gravity="center"
                android:text="@string/dinosaur" />

            <RadioButton
                android:id="@+id/radioPrincess"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="20dp"
                android:button="@drawable/princess"
                android:checked="false"
                tools:ignore="DuplicateSpeakableTextCheck"
                android:text="@string/princess" />

            <RadioButton
                android:id="@+id/radioJungle"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="20dp"
                android:button="@drawable/castle"
                android:checked="false"
                android:text="@string/jungle" />
        </RadioGroup>

        <Button
            android:id="@+id/submitThemeButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#2196F3"
            android:text="@string/continue_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
